@@ -14,6 +14,9 @@ XXX
   - Minor changes to ldap module to use ldap_init as ldap_open
     is depreciated and to warn about multiple entries being
     returned. Eric <edk@ypass.net>
+  - A child process, or process handling an inetd connection
+    will exit on reciept of a SIG PIPE.
+
 
 
 ----------------------------------------------------------------------
